--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,11 @@ plugins {
 
 android {
     compileSdkVersion 31
-    buildToolsVersion "31"
+
     buildFeatures {
         viewBinding true
     }
+
 
     defaultConfig {
         applicationId "com.raywenderlich.listmaker"
@@ -48,7 +49,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     implementation 'androidx.preference:preference-ktx:1.1.1.'
     implementation 'androidx.preference:preference-ktx:1.2.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
 }
